			- Changed Player's weapons to be on the outside of their body
				- Player's weapons also go transparent when they are invincible
			- Changed players to be fully colored in (just black for now)
		UI:
			- Moved Player name to be on top of player
			- Moved Player Ammo up a pixel
			- Player name and Ammo are less transparent
			- Removed Gun when player is in build mode

	Changes:
		- Changed grid.png to be 4x it's original size (Was: 1600x900, Now: 6400x3840)

	Fixes:
		- Player will try to respawn if respawn area is occupied by a block - Fixes #43
		- Grid was not updating player's positions correctly - Fixes #44, #45
		- Client wouldn't check for ammo when attempting to shoot - Fixes #40
		- Added offsets to mouse calculation for other deadzones - Fixes #39
		- Client wouldn't check for blocks when attempting to build - Fixes #51

	Other:
		- Added GitHub Issue template
		- Updated README.md

	SPECIAL THANKS:
	Art Assets:
		Clinton Bone
	Debuggers:
		Marko Vehmas, Valmay Green, Clinton Bone

####################################################################################################################

v0.4.0 --- Released: 5-2-2017
	Additions:
		Gameplay:
			- Added Rifle
				- Can only shoot every 500ms
				- Has 6 ammo per clip
			- Player holds 3 clips (starts with full clip for total of 24 shots)
			- Player cannot shoot if they are reloading, or if they run out of clips
			- Player regains all ammo, clips, blocks after death
			- Player is invincible for 3 seconds after respawning
			- Player is transparent when invincible
			- Added ability to place blocks onto the grid
				- Blocks can be destroyed after 3 hits
				- Blocks can only be placed in the 8 tiles surrounding the player
				- Blocks cannot be placed if there is a block already there
				- Blocks cannot be placed if there is a player in the tile (including overlaps)
		UI:
			- Added ammo to player
			- Added player score to UI canvas
			- Added player clips to UI canvas