@@ -1,6 +1,8 @@
 //World constants
 const WORLD_WIDTH = 3200;
 const WORLD_HEIGHT = 1800;
+//#FIXME: WORLD SIZE DIRECTLY AFFECTS GRID, GRID NEEDS TO BE OPTIMIZED
+//TO PREVENT LAG WHEN WORLDSIZE IS LARGE
 
 //Tile constants
 const TILE_WIDTH = 80;
